@@ -3,9 +3,11 @@ AUX nginx.conf-r4 1473 RMD160 012556820bf2fe804454822cf88dbeb107a48715 SHA1 b000
 DIST Ngx_rrd_graph-0.1.tar.gz 4005 RMD160 7ae96d110e748b2f4457545440c777918c145b0b SHA1 1428a7cecdad89de031f829b3fa485a8832b3f62 SHA256 e018221eba4ac91b5cbaabd440c2da72675c8432be12e001321293014a3d87e7
 DIST nginx-0.8.21.tar.gz 609931 RMD160 a00d377ba117a0d6182da5258d3742c07b53d51b SHA1 6c34b8d432081b783f2215e1cbe08e2481522aad SHA256 857c6708b48a177a8bc09d3e53e1518ed0bdf4b7f690188f3b219b0c14e3f6a5
 DIST nginx-0.8.22.tar.gz 612363 RMD160 3c638a935c1d74a844f134558838dd9a1a0b1859 SHA1 5e2335c387332563e56ac59331bed4d8492d34f0 SHA256 ebf221027010ff3646a765628682cd51025d7904b6711e5e2168f670e10ec36d
+DIST nginx-0.8.28.tar.gz 615516 RMD160 7e48f7fb9846bd25ac11eda16ad49a746ce6d9c4 SHA1 d27d0da906d460751af263a13a520dda0afb41b0 SHA256 642b3bc58d5125859c74b4730f8049e61211bcf31612e2b14d9a182d25f11235
 DIST nginx_mp4_streaming_public_20081229.tar.bz2 9469 RMD160 ec4c8a0ef86db6cf63f4697546462b127305f5a8 SHA1 ad909c369fa092b6ff457c599213d567a8a66936 SHA256 4908709c50f73d73cb1c16136eaca4b280d8abb60dfd302e79c48f71a68c5d3e
 DIST ngx_http_auth_pam_module-1.1.tar.gz 5193 RMD160 38437a1f5d34f93b22abb9f0a7181be756356d33 SHA1 d04065a512169925dda8bce710e1dc5012cac47b SHA256 ea9da5f106b952729398248cddabbe25f7a5752993e91c9b8252dbc2b03b8ecd
 EBUILD nginx-0.8.21-r50.ebuild 4943 RMD160 e8cd81e06f7e1f6ea3c49786cce62b481455caa9 SHA1 3fe4c46fe0a7d891610690a375a44e9b8251387f SHA256 758d25db980a2c6b57382aa73943173e3ecda5410551f6a55f6ee232d59c3cb5
 EBUILD nginx-0.8.22-r50.ebuild 4943 RMD160 e8cd81e06f7e1f6ea3c49786cce62b481455caa9 SHA1 3fe4c46fe0a7d891610690a375a44e9b8251387f SHA256 758d25db980a2c6b57382aa73943173e3ecda5410551f6a55f6ee232d59c3cb5
-MISC ChangeLog 715 RMD160 a20e85efff2439df25f9c32437dce3088fd66560 SHA1 0eac909df0346ef8d38e2da8c50bee5e20972812 SHA256 dfae74337ea59f8375bb77412201e142874c69c8f2c1c4f144d0c910d8fcac67
+EBUILD nginx-0.8.28-r50.ebuild 4943 RMD160 e8cd81e06f7e1f6ea3c49786cce62b481455caa9 SHA1 3fe4c46fe0a7d891610690a375a44e9b8251387f SHA256 758d25db980a2c6b57382aa73943173e3ecda5410551f6a55f6ee232d59c3cb5
+MISC ChangeLog 820 RMD160 96cf969798f350fb2fe78ce8ed40b4e8a7b22104 SHA1 15ccde98dd2f4f81ef65619fee27928271cfdbe3 SHA256 dcc29ac258c56d1c8647250982a6bf1219ece9bf601fc8d243b6184fd7974764
 MISC metadata.xml 1338 RMD160 3586b779c10dab5eaacbef98ddbe23196a2de648 SHA1 31af3d4de39856167e0095230494b86d02416b48 SHA256 0e72f15f93867c9865c7a1360d1b32a94d0b59d60805b454184a78513d2c6148
