@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header:
 
+  27 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +nginx-0.8.28-r50.ebuild:
+  add new dev. version
+
   10 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +nginx-0.8.22-r50.ebuild:
   version bump
